Fix exception header alignment

--- a/src/app/issues/issue-detail/event-detail/entry-exception/entry-exception.component.scss
+++ b/src/app/issues/issue-detail/event-detail/entry-exception/entry-exception.component.scss
@@ -16,6 +16,11 @@
   }
   .text-wrapper {
     display: flex;
+    align-items: center;
+    
+    h3 {
+      margin-bottom: 0px;
+    }
   }
 
   .spacer {
